force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_D0368sentAppointment2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_D0368sentAppointment2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of CRMD-10581</description>
    <label>D0368 sent Appointment 2</label>
    <type>Checkbox</type>
</CustomField>