force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DamageAssessorPrintName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DamageAssessorPrintName__c</fullName>
    <description>CRMD-7691</description>
    <label>Damage Assessor Print Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>