force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DamageCausedBy__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DamageCausedBy__c</fullName>
    <description>CRMD-7691</description>
    <label>Damage Caused By?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excavator</fullName>
            </value>
            <value>
                <fullName>Compressor Tool</fullName>
            </value>
            <value>
                <fullName>Drilling Machine</fullName>
            </value>
            <value>
                <fullName>Cutting Machine</fullName>
            </value>
            <value>
                <fullName>Hand Tool</fullName>
            </value>
            <value>
                <fullName>Farm Vehicle</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>