force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DamageCausedbyOther__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DamageCausedbyOther__c</fullName>
    <description>CRMD-7691</description>
    <label>Damage Caused by Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>