force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DataManagementReturnedDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DataManagementReturnedDate__c</fullName>
    <label>Data Management Returned Date</label>
    <type>Date</type>
</CustomField>