force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Dateassignedtopartner__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Dateassignedtopartner__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <formula>SPEN_Case__r.SPEN_PartnerAssignmentTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date assigned to partner</label>
    <type>DateTime</type>
</CustomField>