force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DateLetter1__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateLetter1__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Date Letter 1</label>
    <type>Date</type>
</CustomField>