force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DateLetter2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateLetter2__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Date Letter 2</label>
    <type>Date</type>
</CustomField>