force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DateofIncident__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateofIncident__c</fullName>
    <description>CRMD-7691</description>
    <label>Date of Incident</label>
    <type>DateTime</type>
</CustomField>