force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DateTimeCall2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateTimeCall2__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Date &amp; Time Call 2</label>
    <type>DateTime</type>
</CustomField>