force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DeclaredVoltageatconnectionpoint__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DeclaredVoltageatconnectionpoint__c</fullName>
    <label>Declared Voltage at connection point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>