force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DemandLimit__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DemandLimit__c</fullName>
    <label>Demand Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>