force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DemandLimitReasons__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DemandLimitReasons__c</fullName>
    <label>Demand Limit Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>