force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DescriptionofWorkBeingCarried__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DescriptionofWorkBeingCarried__c</fullName>
    <description>CRMD-7691</description>
    <inlineHelpText>Description of Work Being Carried Out When Damage Occurred</inlineHelpText>
    <label>Work Carried Out When Damage Occurred</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>