force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DeviceClass__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DeviceClass__c</fullName>
    <label>Device Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>