force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DeviceSystemRef__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DeviceSystemRef__c</fullName>
    <label>Device System Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>