force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DidthelineremainLiveonground__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DidthelineremainLiveonground__c</fullName>
    <description>CRMD-7691</description>
    <label>Did the line remain Live on ground?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>