force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_District__c.field-meta.xml
<CustomField>
    <fullName>SPEN_District__c</fullName>
    <formula>SPEN_Case__r.SPEN_ConnectionDistrict__c</formula>
    <label>District</label>
    <type>Text</type>
</CustomField>