force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DistrictZone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DistrictZone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>SPEN_Zone__c.SPEN_Type__c</field>
            <operation>equals</operation>
            <value>District</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SPEN_Zone__c</referenceTo>
    <relationshipLabel>Case Information</relationshipLabel>
    <relationshipName>Case_Information</relationshipName>
    <type>Lookup</type>
</CustomField>