force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DNO__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DNO__c</fullName>
    <label>DNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>