force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DNOComments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DNOComments__c</fullName>
    <label>DNO Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>