force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DNOCommunication__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DNOCommunication__c</fullName>
    <label>DNO Communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>