force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DNOcutoutratingknown__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DNOcutoutratingknown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNO cut-out rating known</label>
    <type>Checkbox</type>
</CustomField>