force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DNODataMPANLooped__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DNODataMPANLooped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNO Data MPAN Looped</label>
    <type>Checkbox</type>
</CustomField>