force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DNODataPostcodeLooped__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DNODataPostcodeLooped__c</fullName>
    <label>DNO Data Postcode Looped</label>
    <length>255</length>
    <type>Text</type>
</CustomField>