force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DNOID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DNOID__c</fullName>
    <label>DNO ID (J)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>