force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_DNOTrustsInstaller__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DNOTrustsInstaller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNO Trusts Installer</label>
    <type>Checkbox</type>
</CustomField>