force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_EarliestAppointmentTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EarliestAppointmentTime__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Earliest Appointment Time</label>
    <type>Time</type>
</CustomField>