force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_EarlyStartReason__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EarlyStartReason__c</fullName>
    <description>Early Start Reason for Web Form</description>
    <label>Early Start Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>