force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_EarlyStartRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EarlyStartRequired__c</fullName>
    <description>Early Start Required for Web Form</description>
    <label>Early Start Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>