force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ENAFormApprovedorRejected__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ENAFormApprovedorRejected__c</fullName>
    <label>ENA Form Approved or Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>