force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ENALCTDataset__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ENALCTDataset__c</fullName>
    <label>ENALCT Dataset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>