force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ENAPlatformDecision__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ENAPlatformDecision__c</fullName>
    <label>ENA Platform Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ENA Processing Successful</fullName>
            </value>
            <value>
                <fullName>Decision Timestamp</fullName>
            </value>
            <value>
                <fullName>LCTs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>