force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_EquipmentDamaged__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EquipmentDamaged__c</fullName>
    <label>Equipment Damaged</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>