force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_EscalatedbyPhoneEmail__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EscalatedbyPhoneEmail__c</fullName>
    <description>CRMD-8138</description>
    <label>Escalated by Phone &amp; Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>