force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Estimated_Cost__c</fullName>
    <description>CRMD-715</description>
    <label>Estimated Cost</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>