force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_EVACThreshold1PhaseTotalSystemAmps__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EVACThreshold1PhaseTotalSystemAmps__c</fullName>
    <label>EVAC Threshold 1 Phase Total System Amps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>