force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_EVACThreshold3PhaseTotalSystemAmps__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EVACThreshold3PhaseTotalSystemAmps__c</fullName>
    <label>EVAC Threshold 3 Phase Total System Amps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>