force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ExcavationDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExcavationDate__c</fullName>
    <label>Excavation Date</label>
    <type>Date</type>
</CustomField>