force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Exemptionoutcome__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Exemptionoutcome__c</fullName>
    <label>Exemption outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>