force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Exemptionreason__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Exemptionreason__c</fullName>
    <label>Exemption reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>