force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_ExistingDevices__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExistingDevices__c</fullName>
    <label>Existing Devices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>