force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_FileName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FileName__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>