force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_FleetNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FleetNumber__c</fullName>
    <description>CRMD-7940</description>
    <label>Fleet Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>