force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_FlowID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FlowID__c</fullName>
    <label>Flow ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>