force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Flowreceiveddate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Flowreceiveddate__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Flow received date</label>
    <type>DateTime</type>
</CustomField>