force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_FolderSharepointURL__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FolderSharepointURL__c</fullName>
    <label>Folder Sharepoint URL</label>
    <type>Url</type>
</CustomField>