force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_FurtherSPENworksRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FurtherSPENworksRequired__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Further SPEN works Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Looped Supply</fullName>
            </value>
            <value>
                <fullName>Permits</fullName>
            </value>
            <value>
                <fullName>Obstructed Equipment</fullName>
            </value>
            <value>
                <fullName>RLM</fullName>
            </value>
            <value>
                <fullName>Shutdown Required</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>