force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Fusefittedsize__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Fusefittedsize__c</fullName>
    <label>Fuse fitted (size)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>