force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_GasUtilityCompany__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GasUtilityCompany__c</fullName>
    <description>CRMD-7940</description>
    <label>Gas Utility Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>