force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_GasUtilityContactName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GasUtilityContactName__c</fullName>
    <description>CRMD-7940</description>
    <label>Gas Utility Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>