force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_GasUtilityContactNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GasUtilityContactNumber__c</fullName>
    <description>CRMD-7940</description>
    <label>Gas Utility Contact Number</label>
    <type>Phone</type>
</CustomField>