force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_GenerationLimit__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GenerationLimit__c</fullName>
    <label>Generation Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>