force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_GenerationLimitReasons__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GenerationLimitReasons__c</fullName>
    <label>Generation Limit Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>