force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Grid_Reference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Grid_Reference__c</fullName>
    <description>CRMD-7940</description>
    <label>Grid Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>