force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_GRNorDisputed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GRNorDisputed__c</fullName>
    <label>GRN or Disputed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRN</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>