force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_HVList__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HVList__c</fullName>
    <description>CRMD-7691</description>
    <label>HV List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6.6kV</fullName>
            </value>
            <value>
                <fullName>11kV</fullName>
            </value>
            <value>
                <fullName>33kV</fullName>
            </value>
            <value>
                <fullName>&gt;=132kV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>