force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_IfInjuryorFatalityWho__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IfInjuryorFatalityWho__c</fullName>
    <description>CRMD-7940</description>
    <label>If Injury or Fatality, Who?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Member of Public</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>SP Contractor</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>