force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_IfYesCauseofLossofSupply__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IfYesCauseofLossofSupply__c</fullName>
    <description>CRMD-7691</description>
    <label>If Yes, Cause of Loss of Supply</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Shutdown</fullName>
            </value>
            <value>
                <fullName>Damage &amp; Shutdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>