force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_IncidentId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentId__c</fullName>
    <formula>SPEN_Case__r.SPEN_Incident__c</formula>
    <label>Incident Id</label>
    <type>Text</type>
</CustomField>