force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_IncidentNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentNumber__c</fullName>
    <description>CRMD-7691</description>
    <label>Incident Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>