force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_InENADatabase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InENADatabase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In ENA Database</label>
    <type>Checkbox</type>
</CustomField>