force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_InstallerAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InstallerAddressLine2__c</fullName>
    <label>Installer Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>