force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_InstallerCompany__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InstallerCompany__c</fullName>
    <label>Installer Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>