force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_InstallerContactNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InstallerContactNumber__c</fullName>
    <label>Installer Contact Number</label>
    <type>Phone</type>
</CustomField>