force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_InstallerEmail__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InstallerEmail__c</fullName>
    <label>Installer Email</label>
    <type>Email</type>
</CustomField>