force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_InstallerName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InstallerName__c</fullName>
    <label>Installer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>