force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_InstallerPostcode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InstallerPostcode__c</fullName>
    <label>Installer Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>