force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_InstallerTown__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InstallerTown__c</fullName>
    <label>Installer Town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>