force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_InstallerUsername__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InstallerUsername__c</fullName>
    <label>Installer Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>