force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_IsSupplySecure__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsSupplySecure__c</fullName>
    <label>Is Supply Secure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>