force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_JobStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JobStatus__c</fullName>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reject: Incomplete contact details</fullName>
            </value>
            <value>
                <fullName>Reject: Out of Area / unknown postcode</fullName>
            </value>
            <value>
                <fullName>Reject: Duplicate</fullName>
            </value>
            <value>
                <fullName>In flight job (CAT-A or CAT-B)</fullName>
            </value>
            <value>
                <fullName>MEX completed</fullName>
            </value>
            <value>
                <fullName>Issued To LP - pending delivery instruction</fullName>
            </value>
            <value>
                <fullName>Awaiting Appointment Call 1 Made</fullName>
            </value>
            <value>
                <fullName>Awaiting Appointment Call 2 Made</fullName>
            </value>
            <value>
                <fullName>Awaiting Appointment Call 3 Made</fullName>
            </value>
            <value>
                <fullName>Awaiting Appointment Letter 1 Sent</fullName>
            </value>
            <value>
                <fullName>Awaiting Appointment 10 WD response</fullName>
            </value>
            <value>
                <fullName>Land Registry</fullName>
            </value>
            <value>
                <fullName>Awaiting Appointment Letter 2 Sent</fullName>
            </value>
            <value>
                <fullName>Escalation L2 Manager/Legal</fullName>
            </value>
            <value>
                <fullName>Reject: Unable to Contact Customer Reasonable Endeavours Made</fullName>
            </value>
            <value>
                <fullName>Appointment Booked 1</fullName>
            </value>
            <value>
                <fullName>No Access on 1st Appointment Date</fullName>
            </value>
            <value>
                <fullName>Appointment Booked 2</fullName>
            </value>
            <value>
                <fullName>Reject: No further appointment made</fullName>
            </value>
            <value>
                <fullName>Reject: No Access on 2nd Appointment Date</fullName>
            </value>
            <value>
                <fullName>Reject: Access Refused Safety</fullName>
            </value>
            <value>
                <fullName>Reject: Access Refused Non Safety</fullName>
            </value>
            <value>
                <fullName>Reject: Unable to Access Equipment Safety</fullName>
            </value>
            <value>
                <fullName>Reject: Unable to Access Equipment Non Safety</fullName>
            </value>
            <value>
                <fullName>Further SPEN Works Req</fullName>
            </value>
            <value>
                <fullName>Reject: no works required</fullName>
            </value>
            <value>
                <fullName>Reject: works already completed</fullName>
            </value>
            <value>
                <fullName>Works Completed</fullName>
            </value>
            <value>
                <fullName>Final Contact Attempt</fullName>
            </value>
            <value>
                <fullName>Disconnection Letter Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>