force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Jointingdate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Jointingdate__c</fullName>
    <label>Jointing date</label>
    <type>Date</type>
</CustomField>