force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_JointingRequired__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JointingRequired__c</fullName>
    <description>Jointing Required for Web Form</description>
    <label>Jointing Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>