force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_LatestAppointment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LatestAppointment__c</fullName>
    <description>Created as part of CRMD-10581</description>
    <label>Latest Appointment</label>
    <type>Time</type>
</CustomField>