force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_LCTCompetentDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LCTCompetentDate__c</fullName>
    <label>LCT Competent Date</label>
    <type>Date</type>
</CustomField>