force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_LCTs__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LCTs__c</fullName>
    <label>LCTs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>