force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_LocationofDamage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LocationofDamage__c</fullName>
    <description>CRMD-7691</description>
    <label>Location of Damage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>