force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_LoopedService__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LoopedService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Looped Service</label>
    <type>Checkbox</type>
</CustomField>