force-app/main/default/objects/SPEN_CaseInformation__c/fields/SPEN_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>